# blockedornot

./: .gitignore  .pnp.cjs  README.md  manage.py  package.json  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report.md  documentation.md  pull_request_template.md  refactoring.md
.github/workflows/: image-builder-dev.yml  image-builder-latest.yml
podman/backend/: Dockerfile
podman/backend-migrate/: migrate.sh
podman/frontend/: Dockerfile
podman/frontend/etc/caddy/: Caddyfile
scripts/: migrate.sh
src/api/: models.py  urls.py  views.py
src/api/migrations/: 0001_initial.py
src/blockedornot/: asgi.py  settings.py  urls.py  wsgi.py
src/frontend/: index.html
src/frontend/src/: main.tsx  router.tsx
src/frontend/src/routes/: background.tsx  root.tsx
