[tool.poetry]
name = "blockedornot"
version = "0.1.0"
description = ""
authors = ["Jeffrey04 <mycyberpet@yahoo.com>"]
readme = "README.md"
packages = [{include = "blockedornot", from = "src"}, {include = "api", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.1.1"
django-structlog = "^8.1.0"
django-dotenv = "^1.4.2"
gunicorn = "^23.0.0"
psycopg2-binary = "^2.9.9"


[tool.poetry.group.dev.dependencies]
ipdb = "^0.13.13"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
